[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal Blog"
authors = ["Pbezerra-dev <herbetyp@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
django_summernote = "^0.8.11"
django-crispy-forms = "^1.9.0"
requests = "^2.23.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
django-axes = "^5.3.1"
psycopg2-binary = "^2.8.6"
mysqlclient = "^2.0.3"
Django = "3.2.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
